alignment issues

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -135,6 +135,7 @@ body {
 
 .gig .fa-calendar {
 	font-size: 80px;
+	margin-right: 15px;
 }
 
 .gig .where {
@@ -154,7 +155,7 @@ body {
 	color: var(--primary-color);
 	position: absolute;
 	top: 30px;
-	left: 35px;
+	left: 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -272,13 +273,14 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	padding: 0 15px;
 }
 
 .form {
 	padding: 15px;
 	margin: 15px;
 	max-width: 705px;
-	width: 100%;
+	width: calc(100% - 30px);
 	border: 2px solid var(--primary-color);
 	border-radius: 5px;
 	display: flex;
